# VaREX

./: README.md  combine_audio.py  transcript.py
VaREX_APP/VaREX/: AudioRecorder.h  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
record/: record.py
